--- a/mysite/requirements.txt
+++ b/mysite/requirements.txt
@@ -1,13 +1,45 @@
 asgiref==3.5.2
+attrs==23.2.0
+certifi==2024.2.2
+charset-normalizer==3.3.2
+click==8.1.7
+click-plugins==1.1.1
+cligj==0.7.2
+colorama==0.4.6
+contourpy==1.2.1
+cycler==0.12.1
 Django==4.0.4
-gunicorn==20.1.0
-psycopg2==2.8.6
-sqlparse==0.4.2
-whitenoise==6.2.0
+fiona==1.9.6
+fonttools==4.51.0
+geographiclib==2.0
+geopandas==0.14.4
 geopy==2.4.1
-scikit-learn==1.3.0
-Pillow==10.0.0
-pandas==2.0.3
+gunicorn==20.1.0
+idna==3.7
+importlib_metadata==7.1.0
+importlib_resources==6.4.0
+joblib==1.4.2
+kiwisolver==1.4.5
 matplotlib==3.7.2
-osmnx==1.9.2
 networkx==3.2.1
+numpy==1.26.4
+osmnx==1.9.2
+packaging==24.0
+pandas==2.0.3
+Pillow==10.0.0
+psycopg2==2.8.6
+pyparsing==3.0.9
+pyproj==3.6.1
+python-dateutil==2.9.0.post0
+pytz==2024.1
+requests==2.31.0
+scikit-learn==1.3.0
+scipy==1.13.0
+shapely==2.0.4
+six==1.16.0
+sqlparse==0.4.2
+threadpoolctl==3.5.0
+tzdata==2024.1
+urllib3==2.2.1
+whitenoise==6.2.0
+zipp==3.18.1
